--- a/.env.prod
+++ b/.env.prod
@@ -2,4 +2,4 @@ VITE_ENV = production
 
 #APIS
 
-VITE_SERVICE_BASE = http://vercel-app-server:8000/api
+VITE_SERVICE_BASE = https://depoproductsapi.zeabur.app/api
